--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,9 +3,10 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/main.css">
   </head>
   <body>
-     <a href="/">home</a> 
+     <a href="/">home0-0</a> 
     {{{body}}}
   </body>
 </html>
