--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,2 +1,4 @@
-$bg-color:black;
-$text-color:white;
+$bg-color:url(../images/linen.png);
+$text-color:black;
+$title-fonts: 'Srisakdi', cursive;
+$subTitle-fonts:'Cinzel', serif;
