--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,2 +1,37 @@
-body{background-color:#000;font-size:14px;color:#fff}a{text-decoration:none;color:white;text-transform:uppercase}
+body {
+  background-image: url(../images/linen.png);
+  font-size: 14px;
+  color: black; }
+
+#homeText {
+  font-family: "Cinzel", serif;
+  padding-top: 20px;
+  padding-bottom: 30px; }
+
+#nameTitle {
+  font-family: "Srisakdi", cursive;
+  height: 30px;
+  padding-top: 10px;
+  padding-bottom: 50px; }
+
+#nameSub {
+  font-family: "Cinzel", serif; }
+
+#homeTitle {
+  padding-bottom: 100px; }
+
+a {
+  text-decoration: none;
+  color: black;
+  text-transform: uppercase; }
+
+a:hover {
+  text-decoration: none;
+  color: seagreen;
+  text-transform: uppercase; }
+
+@media (max-width: 575.98px) {
+  #imgcard {
+    width: 200px; } }
+
 /*# sourceMappingURL=main.css.map */
