--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,4 +2,8 @@
 @import 'modules/_home';
 @import 'modules/_users';
 
-a{text-decoration: none; color:white; text-transform: uppercase;}
+a{text-decoration: none; color:black; text-transform: uppercase;}
+a:hover{text-decoration: none;color:seagreen;text-transform: uppercase;}
+@media (max-width: 575.98px) { 
+    #imgcard {width: 200px;}
+ }
