--- a/sass/modules/_home.scss
+++ b/sass/modules/_home.scss
@@ -1,5 +1,11 @@
-body{background-color: $bg-color;
+body{background-image: $bg-color;
     font-size: 14px;
     color:$text-color;
 
+}
+
+#homeText{
+    font-family:$subTitle-fonts;
+    padding-top: 20px;
+    padding-bottom: 30px;
 }
