--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,11 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
-<a href="/user1">user1</a>
-<a href="/user2">user2</a>
+<a href="/user1" class="btn btn-outline-warning" role="button">Product1</a>
+
+<a href="/user2" class="btn btn-outline-warning" role="button">Product2</a>
+
+<p id="homeText">{{intro}}</p>
+<img src="/images/{{HOMEimg}}" alt="home describe" width="600px">
+
+
