--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
+
   <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+     <link href="https://fonts.googleapis.com/css?family=Cinzel%7CSrisakdi" rel="stylesheet">
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="/stylesheets/main.css">
   </head>
   <body>
-     <a href="/">home0-0</a> 
+     <a id="homeTitle" href="/">HOME-lING</a> 
     {{{body}}}
   </body>
 </html>
