--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,6 +4,7 @@
 <a href="/user1" class="btn btn-outline-warning" role="button">Product1</a>
 
 <a href="/user2" class="btn btn-outline-warning" role="button">Product2</a>
+<a href="/user3" class="btn btn-outline-warning" role="button">Product3</a>
 
 <p id="homeText">{{intro}}</p>
 <img src="/images/{{HOMEimg}}" alt="home describe" width="600px">
